--- a/lang/de.yml
+++ b/lang/de.yml
@@ -1,16 +1,19 @@
 de:
   PageImages:
     IMAGESSORTER: "Sortieren nach: "
+    IMAGESSORTERDIR: "Sortierrichtung: "
     IMAGESNOTICE: "<span style='color: green'>Anordnen durch ziehen des Miniaturbildes</span>"
     IMAGESNOTICEWRONG: "<span style='color: red'>Sortieren der Bilder nicht möglich. Modul SortabeUploadField fehlt.</span>"
     IMAGESUPLOADLABEL: "Bilder"
-    IMAGESUPLOADLIMIT: "Maximal {count} Bilder folgender Typen {extensions} mit einer Größe von {size} MB pro Datei."
+    IMAGESUPLOADLIMIT: "Maximal {count} Bilder der Typen {extensions} mit einer Größe von max. {size} MB pro Datei."
     IMAGETAB: "Bilder"
     SHOWIMAGES: "Zeige Tab Bilder auf dieser Seite?"
     CHOOSEIMAGEFOLDER: "Verzeichnis auswählen: "
-# Sorter (Enum) translation
+# Sorter (Enum) translations
     SortOrder: "Wie hier gezeigt"
     Title: "Titel"
     Name: "Name"
     FileID: "ID"
     Size: "Größe"
+    ASC: "Aufsteigend"
+    DESC: "Absteigend"
