--- a/lang/de.yml
+++ b/lang/de.yml
@@ -3,16 +3,15 @@ de:
   PageImages:
     IMAGESSORTER: "Sortieren nach: "
     IMAGESSORTERDIR: "Sortierrichtung: "
-    IMAGESNOTICE: "<span style='color: green'>Anordnen durch ziehen des Miniaturbildes</span>"
-    IMAGESNOTICEWRONG: "<span style='color: red'>Sortieren der Bilder nicht möglich. Modul SortabeUploadField fehlt.</span>"
     IMAGESUPLOADLABEL: "Bilder"
     IMAGESUPLOADLIMIT: "Maximal {count} Bilder der Typen {extensions} mit einer Größe von max. {size} MB pro Datei."
     IMAGETAB: "Bilder"
-    SHOWIMAGES: "Zeige Karteireiter Bilder."
-    IMAGETABHINT: "Aktiviere zusätzliche Bilder auf dieser Seite."
-    CHOOSEIMAGEFOLDER: "Verzeichnis auswählen (optional)"
-    IMAGEFOLDERHINT:"Das gewählte Verzeichnis wird auf die Bilder unten angewandt."
-    MAXIMAGES: "Maximale Anzahl von Bildern auf dieser Seite:"
+    IMAGETABHINT: "Um Karteireiter Bilder zu zeigen."
+    SHOWIMAGES: "Aktiviere pageimages"
+    CANUPLOAD: "Benutzer kann Bilder hochladen?"
+    MAXIMAGES: "Maximale Anzahl Bilder:"
+    CHOOSEIMAGEFOLDER: "Verzeichnis vorwählen:"
+
 # Sorter (Enum) translation
     SortOrder: "Angezeigte Reihenfolge"
     Title: "Titel"
