--- a/lang/de.yml
+++ b/lang/de.yml
@@ -4,9 +4,9 @@ de:
     IMAGESSORTER: "Sortieren nach: "
     IMAGESSORTERDIR: "Sortierrichtung: "
     IMAGESUPLOADLABEL: "Bilder"
-    IMAGESUPLOADLIMIT: "Maximal {count} Bilder der Typen {extensions} mit einer Größe von max. {size} MB pro Datei."
-    IMAGETAB: "Bilder"
-    IMAGETABHINT: "Um Karteireiter Bilder zu zeigen."
+    IMAGESUPLOADLIMIT: "Maximal {count} Bild(er) der Typen {extensions} mit einer Größe von max. {size} MB pro Datei."
+    IMAGETAB: "Zusätzliche Bilder"
+    IMAGETABHINT: "Zeige Karteireiter \"Zusätzliche Bilder\" um zusätzliche Bilder zu verwalten."
     SHOWIMAGES: "Aktiviere pageimages"
     CANUPLOAD: "Benutzer kann Bilder hochladen?"
     MAXIMAGES: "Maximale Anzahl Bilder:"
