--- a/lang/en.yml
+++ b/lang/en.yml
@@ -4,11 +4,11 @@ en:
     IMAGESSORTER: "Sort imags by: "
     IMAGESSORTERDIR: "Sort direction: "
     IMAGESUPLOADLABEL: "Images"
-    IMAGESUPLOADLIMIT: "Up to {count} images of type {extensions} with a max. size of {size} MB per file."
-    IMAGETAB: "Images"
-    IMAGETABHINT: "Will show tab Images"
+    IMAGESUPLOADLIMIT: "Up to {count} image(s) of type {extensions} with a max. size of {size} MB per file."
+    IMAGETAB: "Additional Images"
+    IMAGETABHINT: "Show tab \"Additional Images\" to manage additional page images"
     SHOWIMAGES: "Enable pageimages?"
-    CANUPLOAD: "User can Upload images?"
+    CANUPLOAD: "User can upload images?"
     MAXIMAGES: "Maximum number of images"
     CHOOSEIMAGEFOLDER: "Preselect folder"
 
