--- a/lang/de.yml
+++ b/lang/de.yml
@@ -1,10 +1,10 @@
 de:
 # PageImages translation
-  PageImages:
+  PageImages_PageExtension:
     IMAGESSORTER: "Sortieren nach: "
     IMAGESSORTERDIR: "Sortierrichtung: "
     IMAGES: "Bilder"
-    IMAGESFOLDER: "Vorgewähltes Verzeichnis: "
+    IMAGESFOLDER: "Vorgewähltes Verzeichnis: <span style='font-weight: bold;'>{folder}</span>"
     IMAGESUPLOADLIMIT: "Maximal {count} Bild(er) der Typen {extensions} mit einer Größe von max. {size} MB pro Datei."
     IMAGETAB: "Zusätzliche Bilder"
     IMAGETABHINT: "Zeige Karteireiter \"Zusätzliche Bilder\" um zusätzliche Bilder zu verwalten."
