--- a/lang/en.yml
+++ b/lang/en.yml
@@ -18,7 +18,7 @@ en:
     Title: "Title"
     Name: "Name"
     ID: "ID (Database order)"
-    Date: "Date"
+    ExifDate: "Date"
     ImageSize: "Size"
 # SorterDir (Enum) translation
     ASC: "Ascending"
